Added Http status and TransactionConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.application.name="Journal App"
+spring.application.name=Journal App
 spring.data.mongodb.uri=${MONGO_URI}
 spring.data.mongodb.database=${DB_NAME}
+spring.data.mongodb.auto-index-creation=true
